<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendAddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="#990000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Talk2Trojans"
            android:textColor="@color/white"
            android:textSize="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="42dp" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="66dp"
            android:layout_height="59dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="?attr/homeAsUpIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/invite_button"
            android:layout_width="66dp"
            android:layout_height="59dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_dialog_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="Search" />

        <EditText
            android:id="@+id/search_textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/results_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="Suggested" />

        <GridView
            android:id="@+id/results_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>