...
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Meeting Name" />

            <EditText
                android:id="@+id/meeting_name_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </LinearLayout>
...
